[package]
name = "cloudflare_uploader"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }

log = "0.4"
env_logger = "0.7"
config = "0.10"
dotenv = "0.15"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.0", features = [ "full" ] }

reqwest = { version = "0.11", features = [ "json"] }
